--- a/cover.css
+++ b/cover.css
@@ -27,6 +27,10 @@ a:hover {
 html,
 body {
   height: 100%;
+  background-image: url('haring.JPG');
+  background-repeat: no-repeat;
+  background-size:100%;
+  background-position:center;
   background-color: #333;
 }
 body {
