--- a/cover.css
+++ b/cover.css
@@ -29,8 +29,14 @@ html,
 body {
 }
 body {
+  width:320px;
+  height:150px;
   color: #333;
-  text-align: center;
+  position:absolute;
+  left:50%;
+  top:50%;
+  margin:-160px 0 0 -160px;
+
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
